--- a/portfolio.html
+++ b/portfolio.html
@@ -7,13 +7,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Raleway:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">
-                <img src="/images/JSL.svg" alt="JSL Health Capital" class="logo-image">
+                <img src="images/JSL.svg" alt="JSL Health Capital" class="logo-image">
             </div>
             <button class="menu-button" aria-label="Toggle menu" aria-expanded="false">
                 <span></span>
@@ -27,9 +27,9 @@
     <div class="nav-panel">
         <ul class="nav-links">
             <li><a href="/">Home</a></li>
-            <li><a href="/team.html">Team</a></li>
-            <li><a href="/portfolio.html">Portfolio</a></li>
-            <li><a href="/help.html">Contact</a></li>
+            <li><a href="team.html">Team</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="help.html">Contact</a></li>
         </ul>
     </div>
 
@@ -50,6 +50,6 @@
         <p>&copy; 2025 JSL Health Capital. All rights reserved.</p>
     </footer>
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
