--- a/team.html
+++ b/team.html
@@ -8,13 +8,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Raleway:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">
-                <img src="/images/JSL.svg" alt="JSL Health Capital" class="logo-image">
+                <img src="images/JSL.svg" alt="JSL Health Capital" class="logo-image">
             </div>
             <button class="menu-button" aria-label="Toggle menu" aria-expanded="false">
                 <span></span>
@@ -28,9 +28,9 @@
     <div class="nav-panel">
         <ul class="nav-links">
             <li><a href="/">Home</a></li>
-            <li><a href="/team.html">Team</a></li>
-            <li><a href="/portfolio.html">Portfolio</a></li>
-            <li><a href="/help.html">Contact</a></li>
+            <li><a href="team.html">Team</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="help.html">Contact</a></li>
         </ul>
     </div>
 
@@ -44,7 +44,7 @@
             <div class="team-grid">
                 <div class="team-member">
                     <div class="team-member-content">
-                        <img src="/images/people/headshot-alex-li.jpeg" alt="Alex Turkeltaub">
+                        <img src="images/people/headshot-alex-li.jpeg" alt="Alex Turkeltaub">
                         <div class="team-member-info">
                             <h3>Alex Turkeltaub</h3>
                             <p class="title">Founder & Managing Partner</p>
@@ -59,7 +59,7 @@
                 </div>
                 <div class="team-member">
                     <div class="team-member-content">
-                        <img src="/images/people/headshot-lekan.jpg" alt="Lekan Wang">
+                        <img src="images/people/headshot-lekan.jpg" alt="Lekan Wang">
                         <div class="team-member-info">
                             <h3>Lekan Wang</h3>
                             <p class="title">Managing Partner</p>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="team-member">
                     <div class="team-member-content">
-                        <img src="/images/people/headshot-daniela-square.jpg" alt="Daniela Kucz">
+                        <img src="images/people/headshot-daniela-square.jpg" alt="Daniela Kucz">
                         <div class="team-member-info">
                             <h3>Daniela Kucz</h3>
                             <p class="title">Vice President</p>
