--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,6 @@
         <p>&copy; 2025 JSL Health Capital. All rights reserved.</p>
     </footer>
 
-    <script type="module" src="main.js"></script>
+    <script type="module" src="./main.js"></script>
 </body>
 </html>
