--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
     <main>
         <section class="hero">
             <h1>Portfolio</h1>
-            <p>Explore our innovative healthcare solutions</p>
+            <p>Companies we believe will create the care ecosystem of tomorrow.</p>
         </section>
 
         <section class="portfolio">
