--- a/team.html
+++ b/team.html
@@ -27,7 +27,7 @@
     <div class="nav-overlay"></div>
     <div class="nav-panel">
         <ul class="nav-links">
-            <li><a href="/">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="team.html">Team</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="help.html">Contact</a></li>
