Updating with team edits

--- a/index.html
+++ b/index.html
@@ -37,31 +37,31 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h1>Healthcare + AI.</h1>
-                <p class="hero-line">Healthcare is rapidly changing.</p>
-                <p class="hero-line">JSL is investing in transformation companies building the new healthy future.</p>
+                <h1>Investing at the Intersection&NewLine;&emsp;&emsp;of Healthcare and AI</h1>
+                
+                <p class="hero-line">Healthcare is being transformed by software, data and AI.</p>
+                <p class="hero-line">We back the companies leading this convergence to build a healthier tomorrow.</p>
             </div>
         </section>
 
         <section class="info-section">
             <div class="info-block">
-                <h2>Investing in you.</h2>
-                <p>We invest in late seed and growth-stage healthcare and life sciences companies with an interesting angle in AI, data, or software. When we invest, we will not only provide capital, but also </p>
+                <h2>Our focus.</h2>
+                <p>We invest in late seed and growth-stage healthcare companies leveraging AI, data, and software to transform the world's most important industry.</p>
             </div>
         </section>
       
         <section class="info-section alt"> 
             <div class="info-block">
-                <h2>Building with you.</h2>
-                <p>As former operators in healthcare and technology, JSL knows what it takes to build world-class companies, and we will jump to yourside whenever you need us. Just ask the entrepreneurs we've backed and the investors with whom we've worked alongside.</p>
+                <h2>Our Vision</h2>
+                <p>Beyond capital: we are hands-on partners accelerating your journey by helping with commercial acceleration and technology strategy & implementation.</p>
             </div>
         </section>
 
         <section class="info-section">
             <div class="info-block">
-                <h2>Plugging you in.</h2>
-                <p>We pride ourselves in being the best-connected investors in healthcare technology. Whether it's an industry CEO, a niche medical expert, a leading AI researcher, a policy decision-maker, or a leading researcher, joining the JSL fold means joining a club with access to the people and information you need to win.</p>
-            </div>
+                <h2>Our Approach</h2>
+                <p>As former founders and operators, we are high urgency. We build alongside you, and connect you to our elite network of healthcare and tech advisors to help you succeed. Building a businuess isn't easy &mdash; your backers need to undersatnd that via personal experience.</p>
         </section>
     </main>
 
