--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
     <main>
         <section class="hero">
             <h1>Portfolio</h1>
-            <p>Companies we believe will create the care ecosystem of tomorrow.</p>
+            <p>Transformative companies in healthcare software, services, and data</p>
         </section>
 
         <section class="portfolio">
