--- a/team.html
+++ b/team.html
@@ -38,7 +38,7 @@
     <main>
         <section class="hero">
             <h1>Our Team</h1>
-            <p>The people that will personally work with you</p>
+            <p>Former founders and operators ready to build alongside you.</p>
         </section>
 
         <section class="team">
@@ -66,7 +66,7 @@
                             <p class="title">Managing Partner</p>
                         </div>
                         <div class="team-member-bio">
-                            <p>Lekan has spent most of his career in healthcare and data, from helping found the healthcare team at Palantir Technologies, to leading go-to-market at Roam Analytics, to leading and building the AI Labs at Parexel.</p>
+                            <p>Lekan has spent most of his career in healthcare and data. Lekan helped found the healthcare team at Palantir Technologies, led go-to-market at Roam Analytics, and subsequently built and led Parexel AI Labs.</p>
                             <a href="https://www.linkedin.com/in/lekanwang/" class="linkedin-icon" aria-label="Lekan Wang's LinkedIn profile">
                                 <i class="fab fa-linkedin"></i>
                             </a>
@@ -81,7 +81,7 @@
                             <p class="title">Vice President</p>
                         </div>
                         <div class="team-member-bio">
-                            <p>Daniela Kucz spent over six years at Palantir technologies, where she led federal health growth efforts. Prior, she worked to advance reproductive health in the non-profit sector.</p>
+                            <p>Daniela spent over six years at Palantir technologies, where she led federal health growth efforts. Prior, she worked to advance reproductive health in the non-profit sector.</p>
                             <a href="https://www.linkedin.com/in/daniela-k-kucz/" class="linkedin-icon" aria-label="Emma Williams's LinkedIn profile">
                                 <i class="fab fa-linkedin"></i>
                             </a>
