Change subtitle to hero line on all pages.

--- a/help.html
+++ b/help.html
@@ -37,7 +37,7 @@
     <main>
         <section class="hero">
             <h1>Contact</h1>
-            <p>Reach out to JSL!</p>
+            <p class="hero-line">Reach out to JSL!</p>
         </section>
 
         <section class="help">
