--- a/team.html
+++ b/team.html
@@ -38,7 +38,7 @@
     <main>
         <section class="hero">
             <h1>Our Team</h1>
-            <p>Former founders and operators ready to build alongside you.</p>
+            <p class="hero-line">Former founders and operators ready to build alongside you.</p>
         </section>
 
         <section class="team">
