Added temp alex headshot

--- a/team.html
+++ b/team.html
@@ -45,7 +45,7 @@
             <div class="team-grid">
                 <div class="team-member">
                     <div class="team-member-content">
-                        <img src="images/people/headshot-alex-li.jpeg" alt="Alex Turkeltaub">
+                        <img src="images/people/headshot-alex-temp-square.jpg" alt="Alex Turkeltaub">
                         <div class="team-member-info">
                             <h3>Alex Turkeltaub</h3>
                             <p class="title">Founder & Managing Partner</p>
