--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h1>Investing at the Intersection&NewLine;&emsp;&emsp;of Healthcare and AI</h1>
+                <h1>Investing at the Intersection&NewLine;of Healthcare and AI</h1>
                 
                 <p class="hero-line">Healthcare is being transformed by software, data and AI.</p>
-                <p class="hero-line">We back the companies leading this convergence to build a healthier tomorrow.</p>
+                <p class="hero-line"><i>We back the companies leading this convergence to build a healthier tomorrow.</i></p>
             </div>
         </section>
 
         <section class="info-section">
             <div class="info-block">
-                <h2>Our focus.</h2>
+                <h2>Our focus</h2>
                 <p>We invest in late seed and growth-stage healthcare companies leveraging AI, data, and software to transform the world's most important industry.</p>
             </div>
         </section>
@@ -61,7 +61,7 @@
         <section class="info-section">
             <div class="info-block">
                 <h2>Our Approach</h2>
-                <p>As former founders and operators, we are high urgency. We build alongside you, and connect you to our elite network of healthcare and tech advisors to help you succeed. Building a businuess isn't easy &mdash; your backers need to undersatnd that via personal experience.</p>
+                <p>As former founders and operators, we are high urgency. We build alongside you, and connect you to our elite network of healthcare and tech advisors to help you succeed. Building a business isn't easy &mdash; your backers need to understand that via personal experience.</p>
         </section>
     </main>
 
