--- a/help.html
+++ b/help.html
@@ -36,17 +36,16 @@
 
     <main>
         <section class="hero">
-            <h1>Contact</h1>
-            <p class="hero-line">Reach out to JSL!</p>
+            <div class="hero-content">
+                <h1>Contact</h1>
+                <p class="hero-line">Reach out to JSL!</p>
+            </div>
         </section>
 
-        <section class="help">
-            <div class="help-content">
-                <div class="help-block">
-                    <h3>Contact Us</h3>
-                    <p>info@jsl.health</p>
-                    <p></p>
-                </div>
+        <section class="info-section">
+            <div class="info-block">
+                <h3>Contact Us</h3>
+                <p>info@jsl.health</p>
             </div>
         </section>
     </main>
