Lots of style fixes. Hamburger menu, drop shadows.

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,8 +36,10 @@
 
     <main>
         <section class="hero">
-            <h1>Portfolio</h1>
-            <p class="hero-line">Transformative companies in healthcare software, services, and data</p>
+            <div class="hero-content">
+                <h1>Portfolio</h1>
+                <p class="hero-line">Transformative companies in healthcare software, services, and data</p>
+            </div>
         </section>
 
         <section class="portfolio">
