--- a/team.html
+++ b/team.html
@@ -37,8 +37,10 @@
 
     <main>
         <section class="hero">
-            <h1>Our Team</h1>
-            <p class="hero-line">Former founders and operators ready to build alongside you.</p>
+            <div class="hero-content">
+                <h1>Our Team</h1>
+                <p class="hero-line">Former founders and operators ready to build alongside you.</p>
+            </div>
         </section>
 
         <section class="team">
