--- a/team.html
+++ b/team.html
@@ -17,16 +17,22 @@
             <div class="logo">
                 <img src="images/JSL.svg" alt="JSL Health Capital" class="logo-image">
             </div>
-            <button class="menu-button" aria-label="Toggle menu" aria-expanded="false">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="team.html">Team</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="help.html">Contact</a></li>
+            </ul>
         </nav>
     </header>
 
     <div class="nav-overlay"></div>
     <div class="nav-panel">
+        <button class="menu-button" aria-label="Toggle menu" aria-expanded="false">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="team.html">Team</a></li>
