--- a/team.html
+++ b/team.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="images/JSL.svg" alt="JSL Health Capital" class="logo-image">
+                <a href="index.html"><img src="images/JSL.svg" alt="JSL Health Capital" class="logo-image"></a>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
