--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 
     <footer>
         <p>&copy; 2025 JSL Health Capital. All rights reserved.</p>
+        <p>Review our <a href="https://recondite-houseboat-a98.notion.site/Modern-Slavery-Statement-201d394d592280af981fedfdc4b44b0a">Modern Slavery Statement here</a>.</p>
     </footer>
 
     <script type="module" src="main.js"></script>
