--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <footer>
         <p>&copy; 2025 JSL Health Capital. All rights reserved.</p>
-        <p>Review our <a href="https://recondite-houseboat-a98.notion.site/Modern-Slavery-Statement-201d394d592280af981fedfdc4b44b0a">Modern Slavery Statement here</a>.</p>
+        <p><a href= "https://notion.jslhealth.com/Website-Privacy-Policy-21dd394d59228039a8f9cc20e0dad2fe?source=copy_link">Privacy Policy</a> | <a href="https://notion.jslhealth.com/Website-Terms-of-Use-21dd394d5922800ab854d4cf85012a8d?source=copy_link">Terms of Use</a> | <a href="https://notion.jslhealth.com/Modern-Slavery-Statement-201d394d592280af981fedfdc4b44b0a?source=copy_link">Modern Slavery Statement</a></p>
     </footer>
 
     <script type="module" src="main.js"></script>
